made changes for adding cors , a middle ware to keep backend and front end active at the same time

--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "dev": "nodemon run dev",
     "start": "node index"
-   
   },
   "keywords": [],
   "author": "MohanKrishnaReddy",
@@ -13,6 +12,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "git": "^0.1.5",
